1.2.4 Respect Magic Text, Show marker names on maps, Plugin supports Java 8 again